# Advent-of-code-2022

./: .gitignore  CMakeLists.txt  Makefile  adventOfCode2022  main.cpp  main.py
day1/: calorieCounting.cpp  calorieCounting.py
day10/: cathodeRayTube.cpp
day11/: attempts  monkeyInTheMiddle.cpp
day12/: hillClimbingAlgorithm.cpp
day13/: distressSignal.cpp  strange_case  test
day14/: regolithReservoir.cpp
day15/: attempts  beaconExclusionZone.cpp  test.txt
day16/: proboscideaVolcanium.cpp
day17/: pyroclasticFlow.cpp
day2/: rockPaperScissors.cpp  rockPaperScissors.py
day3/: calorieCounting.py  rucksackReorganization.cpp
day4/: campCleanup.cpp
day5/: supplyStacks.cpp
day6/: tuningTrouble.cpp
day7/: noSpaceLeftOnDevice.cpp  noSpaceLeftOnDevice.py  puzzle_input.txt
day8/: treetopTreeHouse.cpp
day9/: ropeBridge.cpp  ropeBridge.py
include/: adventOfCode2022.hpp
